--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               </div>
             </div>
             <div class="if_content">
-                a
+                <img id="d_img" src="d_1.png"/>
             </div>
         </div>
         </div>
