--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div class="if_content">
                 <img id="d_img" src="d_1.png"/>
+                teste cinut
             </div>
         </div>
         </div>
