finaliazda a nova index

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <div class="area_destaque">
           <div class="index_frame">
             <div class="if_head">
+              <div class="if_head_texto">
+                <h1 id="if_head_texto">My_self.im</h1>
+              </div>
               <div class="if_x_area">
                 <h1 id="if_x">X</h1>
               </div>
             </div>
             <div class="if_content">
                 <img id="d_img" src="d_1.png"/>
-                teste cinut
             </div>
         </div>
         </div>
